[gd_scene load_steps=2 format=3 uid="uid://r8akqempa8vo"]

[ext_resource type="Script" path="res://Main/ChangeProfile.gd" id="1_wjifg"]

[node name="ChangeProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wjifg")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -288.0
offset_right = 256.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="ForeGround" type="ColorRect" parent="BackGround"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -276.0
offset_right = 240.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.478431, 0.803922, 0.784314)

[node name="MainLabel" type="Label" parent="BackGround/ForeGround"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 448.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 32
text = "User Profile"
horizontal_alignment = 1

[node name="Info" type="Label" parent="BackGround/ForeGround"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 200.0
text = "Username:
Email:
CreatedAt:
LastLoginAt:
UUID:
"

[node name="UsernameLabel" type="Label" parent="BackGround/ForeGround"]
layout_mode = 0
offset_left = 32.0
offset_top = 216.0
offset_right = 136.0
offset_bottom = 248.0
text = "Username:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UsernameText" type="LineEdit" parent="BackGround/ForeGround"]
layout_mode = 0
offset_left = 144.0
offset_top = 216.0
offset_right = 448.0
offset_bottom = 247.0

[node name="SaveButton" type="Button" parent="BackGround/ForeGround"]
layout_mode = 0
offset_left = 160.0
offset_top = 504.0
offset_right = 320.0
offset_bottom = 544.0
text = "Save changes"

[node name="Save" type="HTTPRequest" parent="BackGround/ForeGround"]

[node name="Get" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackGround/ForeGround/SaveButton" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="BackGround/ForeGround/Save" to="." method="_on_save_completed"]
[connection signal="request_completed" from="Get" to="." method="_on_request_completed"]
